--- a/oficina/core/templates/core/index.html
+++ b/oficina/core/templates/core/index.html
@@ -14,10 +14,15 @@
                     <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link" aria-current="page" href="/">Home</a>
-                        <a class="nav-link" href="/login">Login</a>
-                    </div>
+                        <div class="navbar-nav">
+                            <a class="nav-link" aria-current="page" href="/">Home</a>
+                            {% if user.is_authenticated %}
+                                <a class="nav-link" href="/ordem-servico">Ordem de Serviço</a>
+                                <a class="nav-link" href="/sair">Sair</a>
+                            {% else %}
+                                <a class="nav-link" href="/entrar">Entrar</a>
+                            {% endif %}
+                        </div>
                     </div>
                 </div>
             </nav>
