--- a/oficina/core/templates/core/login.html
+++ b/oficina/core/templates/core/login.html
@@ -1,15 +1,18 @@
 {% extends 'core/index.html' %}
 {% block content %}
 <main>
-    <form>
+    <form method="post">
+        {% csrf_token %}
         <h1 class="h3 mb-3 fw-normal">Faça seu login</h1>
         <div class="mb-3">
+            {{form_login.username.errors}}
             <label>Login</label>
-            <input type="email" class="form-control" placeholder="name@example.com">
+            {{form_login.username}}
         </div>
         <div class="mb-3">
+            {{form_login.password.errors}}
             <label>Senha</label>
-            <input type="password" class="form-control" placeholder="digite a sua senha...">
+            {{form_login.password}}
         </div>
         <button class="w-100 btn btn-lg btn-primary" type="submit">Enviar</button>
     </form>
